Handle invalid UTF-8 during artifact parsing